--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<style>
 @charset "UTF-8";
 /* Body */
 body {
@@ -278,6 +279,7 @@ footer {
 	width: 80%;
 }
 }
+</style>
 
 <!doctype html>
 <html>
