--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ footer {
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">My Details&nbsp;</h4>
+    <h4 class="logo">Shweta Jalan &nbsp;</h4>
   </header>
   <!-- Hero Section -->
   <section class="intro">
@@ -304,7 +304,17 @@ footer {
       <img src="..//IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
     <div class="column">
       <p>Senior Manager, Pegasystems&nbsp; </p>
-      <p>Have 15+ years experience in inductry. A quick learner, and enthusiat.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+      <p>A result oriented team player with 11+ years of rich and insightful experience in IT industry involving Development and Maintenance. 
+
+•	Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.
+•	Strong analytical and problem solving skills.
+•	Innovative and played crucial roles in development planning and implementation.
+•	Good team leading and resource management skills, always leading by example.
+•	Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.
+•	Experience in leading and working in blended model with leading and working in team size of up to 20 people.
+•	Worked on domain like Banking, Health Care, Travel
+•	Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development.
+</p>
     </div>
   </section>
   <!-- Stats Gallery Section -->
