--- a/index.html
+++ b/index.html
@@ -313,17 +313,21 @@ footer {
       <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
   </section>
-  <!-- Stats Gallery Section -->
-  <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>PegaSystems&nbsp;</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	<h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <section class="intro">
+    <div class="column">
+      <h3>&nbsp;</h3>
+      <img src="../IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
+    <div class="column">
+      <p>Senior Manager, Pegasystems&nbsp; </p>
+      <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
+      <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
+      <p>• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
+      <p>• Good team leading and resource management skills, always leading by example.&nbsp;</p>
+      <p>• Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.</p>
+      <p>&nbsp;• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
+      <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
-	</div>
+  </section>
    
   <!-- Footer Section -->
   <footer id="contact">
