--- a/index.html
+++ b/index.html
@@ -312,12 +312,11 @@ footer {
       <p>&nbsp;• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
       <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
     </div>
+	  <div>
+          </div
   </section>
   <section class="intro">
-    <div class="column">
-      <h3>&nbsp;</h3>
-      <img src="../IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
-    <div class="column">
+ <div>
       <p>Senior Manager, Pegasystems&nbsp; </p>
       <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
       <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
