--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@ header {
 .intro .column p {
 	color: #FFFFFF;
 }
+	.singlecolumn {
+	width: 100%;
+	text-align: center;
+	padding-top: 30px;
+	float: left;
+}
 .cards {
 	width: 100%;
 	height: auto;
@@ -316,7 +322,7 @@ footer {
           </div
   </section>
   <section class="intro">
- <div>
+ <div class="singlecolumn">
       <p>Senior Manager, Pegasystems&nbsp; </p>
       <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
       <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
