--- a/index.html
+++ b/index.html
@@ -302,46 +302,63 @@ footer {
   <!-- Header -->
   <header class="header">
     <h4 class="logo">Shweta Jalan</h4>
+    <p><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;shwetajalan13@gmail.com&nbsp;</em></strong></p>
   </header>
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
       <h3>&nbsp;</h3>
-      <img src="../IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
+      <img src="../OneDrive - Pegasystems Inc/My photo/IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
     <div class="column">
-      <p>Senior Manager, Pegasystems&nbsp; </p>
-      <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
-      <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
-      <p>• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
-      <p>• Good team leading and resource management skills, always leading by example.&nbsp;</p>
-      <p>• Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.</p>
-      <p>&nbsp;• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
-      <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-    </div>
-	  <div>
-          </div
+      <h1>&nbsp;</h1>
+      <h1>&nbsp;</h1>
+      <h1>&nbsp;</h1>
+      <h1><strong>Senior Manager, Pegasystems&nbsp; </strong></h1>
+<p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+</div>
   </section>
   <section class="intro">
  <div class="singlecolumn">
-      <p>Senior Manager, Pegasystems&nbsp; </p>
-      <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
+      <h3>Profile&nbsp;</h3>
+<p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
       <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
       <p>• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
       <p>• Good team leading and resource management skills, always leading by example.&nbsp;</p>
       <p>• Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.</p>
       <p>&nbsp;• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
-      <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-    </div>
+      <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp;&nbsp;</p>
+      <p>&nbsp;</p>
+      <h3><strong>Professional Certifications</strong></h3>
+<p>&nbsp; Pega Lead System Architect :- CLSA&nbsp;</p>
+      <p>&nbsp;Pega Marketing Consultant Certification (CPMC)&nbsp;</p>
+      <p>&nbsp;Pega Certified Senior System Architect 6.2 (CSSA)&nbsp;</p>
+      <p>&nbsp;Pega Certified System Architect 6.1 (CSA)&nbsp;</p>
+      <p>&nbsp;Sun Certified Web Component Developer (SCWCD).&nbsp;</p>
+      <p>&nbsp;Sun Certified Java Programmer (SCJP). </p>
+      <p>&nbsp;</p>
+      <h2><strong>Professional</strong><strong> Summary</strong>&nbsp;</h2>
+      <p>&nbsp; &nbsp; &nbsp;</p>
+      <p> PegaSystems Senior Manager 2018 - Till Date&nbsp;</p>
+      <p> Atos India Pvt Ltd. Technical Architect 2017-2018&nbsp;</p>
+      <p> Capgemini Technical Lead&nbsp; 2014 - 2017</p>
+      <p> Mphasis Team Lead&nbsp; &nbsp;2010-2014</p>
+      <p>Traverze Consultancy Pvt Ltd&nbsp; Sr Developer  2010-2010</p>
+      <p>NIIT Pvt. Ltd, India&nbsp; 2009-2010</p>
+      <p>Jubilant Biosys Ltd. 200-2006&nbsp;</p>
+<p>&nbsp;</p>
+ </div>
   </section>
    
   <!-- Footer Section -->
-  <footer id="contact">
-    <p class="hero_header">GET IN TOUCH WITH ME</p>
-    <div class="button">EMAIL ME </div>
-  </footer>
+  
   <!-- Copyrights Section -->
-  <div class="copyright">&copy;2021 - <strong>GRID</strong></div>
 </div>
 <!-- Main Container Ends -->
 </body>
 </html>
+
