--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<style>
 @charset "UTF-8";
 /* Body */
 body {
@@ -12,12 +11,16 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #FFFFFF;
-}
+/* Add this as properties to a selector */
+	background-image: url("image url"), url("image url");
+	background-color: rgba(159,232,251,0.42);
+	background-size: 50% 100%;
+	background-repeat: no-repeat, no-repeat;}
 /* Header */
 header {
 	width: 100%;
 	height: 8%;
-	background-color: #5D5E5D;
+	background-color: #2d58c4;
 	border-bottom: 1px solid #353635;
 }
 .logo {
@@ -90,12 +93,17 @@ header {
 /* More info */
 .intro {
 	background-color: #FFFFFF;
-	padding-bottom: 35px;
 }
 .column {
 	width: 50%;
 	text-align: center;
 	padding-top: 30px;
+	float: left;
+}
+.singlecolumn {
+	width: 100%;
+	text-align: left;
+	padding-left: 30px;
 	float: left;
 }
 .intro .column h3 {
@@ -104,12 +112,6 @@ header {
 }
 .intro .column p {
 	color: #FFFFFF;
-}
-	.singlecolumn {
-	width: 100%;
-	text-align: center;
-	padding-top: 30px;
-	float: left;
 }
 .cards {
 	width: 100%;
@@ -154,25 +156,11 @@ header {
 	color: #FFFFFF;
 	cursor: pointer;
 }
-.copyright {
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: #717070;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	font-weight: lighter;
-	letter-spacing: 2px;
-	border-top-width: 2px;
-}
-footer {
-	background-color: #B3B3B3;
-	padding-top: 60px;
-	padding-bottom: 60PX;
-}
+
+
 .intro {
 	display: inline-block;
-	background-color: #6DC7D0;
+	background-color: #c7d2ed;
 }
 .profile {
 	width: 50%;
@@ -285,6 +273,7 @@ footer {
 	width: 80%;
 }
 }
+
 </style>
 
 <!doctype html>
@@ -308,7 +297,7 @@ footer {
   <section class="intro">
     <div class="column">
       <h3>&nbsp;</h3>
-      <img src="../OneDrive - Pegasystems Inc/My photo/IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
+      <img src="../IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
     <div class="column">
       <h1>&nbsp;</h1>
       <h1>&nbsp;</h1>
