--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ header {
 	letter-spacing: 4px;
 	margin-right: auto;
 	text-align: center;
-	padding-top: 15px;
-	line-height: 2em;
+	padding-top: 10px;
+	line-height: 1em;
 	font-size: 22px;
 }
 .hero_header {
@@ -292,22 +292,20 @@ header {
   <!-- Header -->
   <header class="header">
     <h4 class="logo">Shweta Jalan</h4>
-    <p><strong><em>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;shwetajalan13@gmail.com&nbsp;</em></strong></p>
+	  <h2 class="logo">shwetajalan13@gmail.com</h2>
   </header>
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
       <h3>&nbsp;</h3>
-      <img src="../IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
+      <img src="..//IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
     <div class="column">
       <h1>&nbsp;</h1>
-      <h1>&nbsp;</h1>
-      <h1>&nbsp;</h1>
-      <h1><strong>Senior Manager, Pegasystems&nbsp; </strong></h1>
-<p>&nbsp;</p>
-      <p>&nbsp;</p>
+      <h1><strong>Lead System Architect, Pegasystems </strong></h1>
+<h4>A technology enthusiasts, working as a senior manager in Pegasystems. Belive in continuous learninig and growing. A working mother of 15 years son, fun loving person who believes "Work Hard and Party Harder"! President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking.</h4>
       
 </div>
+
   </section>
   <section class="intro">
  <div class="singlecolumn">
@@ -348,4 +346,3 @@ header {
 <!-- Main Container Ends -->
 </body>
 </html>
-
