--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ header {
 </div>
 
   </section>
-  <section class="intro">
+  <section class="singlecolumn">
  <div class="singlecolumn">
       <h3>Profile&nbsp;</h3>
 <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
