--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ header {
 
   </section>
   <section class="singlecolumn">
- <div class="singlecolumn">
+ <div>
       <h3>Profile&nbsp;</h3>
 <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
       <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
