--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 	background-color: #FFFFFF;
 /* Add this as properties to a selector */
 	background-image: url("image url"), url("image url");
-	background-color: rgba(159,232,251,0.42);
+	background-color: rgba(199,210,237,255);
 	background-size: 50% 100%;
 	background-repeat: no-repeat, no-repeat;}
 /* Header */
@@ -98,11 +98,14 @@ header {
 .column {
 	width: 50%;
 	text-align: center;
-	padding-top: 30px;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-right: 10px;
 	float: left;
 }
 .singlecolumn {
-	width: 90%;
+	width: 100%;
 	text-align: left;
 	padding-left: 30px;
 	float: left;
