--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 	background-color: #FFFFFF;
 /* Add this as properties to a selector */
 	background-image: url("image url"), url("image url");
-	background-color: rgba(199,210,237,255);
+	background-color: rgba(159,232,251,0.42);
 	background-size: 50% 100%;
 	background-repeat: no-repeat, no-repeat;}
 /* Header */
@@ -98,10 +98,7 @@ header {
 .column {
 	width: 50%;
 	text-align: center;
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-right: 10px;
+	padding-top: 30px;
 	float: left;
 }
 .singlecolumn {
@@ -278,6 +275,7 @@ header {
 }
 }
 
+
 </style>
 
 <!doctype html>
@@ -301,7 +299,7 @@ header {
   <section class="intro">
     <div class="column">
       <h3>&nbsp;</h3>
-      <img src="..//IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
+      <img src="../OneDrive - Pegasystems Inc/My photo/IMG_20191006_174144_Bokeh__01.jpg" alt="" class="profile"> </div>
     <div class="column">
       <h1>&nbsp;</h1>
       <h1><strong>Lead System Architect, Pegasystems </strong></h1>
@@ -310,8 +308,8 @@ header {
 </div>
 
   </section>
-  <section class="singlecolumn">
- <div>
+  <section class="intro">
+ <div class="singlecolumn">
       <h3>Profile&nbsp;</h3>
 <p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
       <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
