--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ header {
 	letter-spacing: 4px;
 	margin-right: auto;
 	text-align: center;
-	padding-top: 10px;
-	line-height: 1em;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	line-height: 2em;
 	font-size: 22px;
 }
 .hero_header {
