--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 	background-color: #FFFFFF;
 /* Add this as properties to a selector */
 	background-image: url("image url"), url("image url");
-	background-color: #c7d2ed
+	background-color:rgba(199,210,237);
 	background-size: 50% 100%;
 	background-repeat: no-repeat, no-repeat;}
 /* Header */
