--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ header {
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">Shweta Jalan</h4>
-	  <h2 class="logo">shwetajalan13@gmail.com</h2>
+    <h4 class="logo">Shweta Jalan /n shwetajalan13@gmail.com</h4>
+	 shwetajalan13@gmail.com
   </header>
   <!-- Hero Section -->
   <section class="intro">
