--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ header {
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">Shweta Jalan /n shwetajalan13@gmail.com</h4>
+    <h4 class="logo">Shweta Jalan <br> shwetajalan13@gmail.com</h4>
 	 shwetajalan13@gmail.com
   </header>
   <!-- Hero Section -->
