--- a/index.html
+++ b/index.html
@@ -304,8 +304,13 @@ header {
     <div class="column">
       <h1>&nbsp;</h1>
       <h1><strong>Lead System Architect, Pegasystems </strong></h1>
-<h4>A technology enthusiasts, working as a senior manager in Pegasystems. Belive in continuous learninig and growing. A working mother of 15 years son, fun loving person who believes "Work Hard and Party Harder"! President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking.</h4>
-      
+	    <p>&nbsp;>
+	    <p>&nbsp;>    
+<h3>A technology enthusiasts, working as a senior manager in Pegasystems. 
+	I Believe in continuous learninig and growing. 
+	A fun loving person who believes in
+	"Work Hard and Party Harder"! I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking.
+	  In my free time I love spending time iwth my teenager son, Learn from  him the new trends. I also love hanging out with my family and friends.</h3?
 </div>
 
   </section>
