--- a/index.html
+++ b/index.html
@@ -306,11 +306,12 @@ header {
       <h1><strong>Lead System Architect, Pegasystems </strong></h1>
 	    <p>&nbsp;>
 	    <p>&nbsp;>    
-<h3>A technology enthusiasts, working as a senior manager in Pegasystems. 
-	I Believe in continuous learninig and growing. 
-	A fun loving person who believes in
-	"Work Hard and Party Harder"! I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking.
-	  In my free time I love spending time iwth my teenager son, Learn from  him the new trends. I also love hanging out with my family and friends.</h3?
+<p>A technology enthusiasts, working as a senior manager in Pegasystems. </p>
+	<p>I Believe in continuous learninig and growing. <p>
+	    <p>A fun loving person who believes in "Work Hard and Party Harder"!</p> 
+		<p>I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking. </p>
+	 <p> In my free time I love spending time iwth my teenager son, Learn from  him the new trends. </p>
+	    <p>I also love hanging out with my family and friends.</p>
 </div>
 
   </section>
