--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ header {
 	text-align: center;
 	padding-top: 30px;
 	float: left;
+	
 }
 .singlecolumn {
 	width: 100%;
@@ -304,14 +305,14 @@ header {
     <div class="column">
       <h1>&nbsp;</h1>
       <h1><strong>Lead System Architect, Pegasystems </strong></h1>
-	    <p>&nbsp;>
-	    <p>&nbsp;>    
-<p>A technology enthusiasts, working as a senior manager in Pegasystems. </p>
-	<p>I Believe in continuous learninig and growing. <p>
-	    <p>A fun loving person who believes in "Work Hard and Party Harder"!</p> 
-		<p>I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking. </p>
-	 <p> In my free time I love spending time iwth my teenager son, Learn from  him the new trends. </p>
-	    <p>I also love hanging out with my family and friends.</p>
+	    <p>&nbsp;/>
+	    <p>&nbsp;/>    
+<p class="text_column">A technology enthusiasts, working as a senior manager in Pegasystems. 
+	I Believe in continuous learninig and growing. 
+	    A fun loving person who believes in "Work Hard and Party Harder"! 
+		I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking. 
+	  In my free time I love spending time iwth my teenager son, Learn from  him the new trends. 
+	    I also love hanging out with my family and friends.</p>
 </div>
 
   </section>
