--- a/index.html
+++ b/index.html
@@ -308,10 +308,15 @@ header {
 	    <p>&nbsp;</p>
 	      
 <h4>A technology enthusiasts, working as a senior manager in Pegasystems.<br> 
+	 <p>&nbsp;</p>
 	I believe in continuous learninig and growing. <br> 
+	 <p>&nbsp;</p>
 	    A fun loving person who believes in "Work Hard and Party Harder"! <br> 
+	 <p>&nbsp;</p>
 		I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking. <br> 
+	 <p>&nbsp;</p>
 	  In my free time I love spending time iwth my teenager son, Learn from  him the new trends. <br> 
+	 <p>&nbsp;</p>
 	    I also love hanging out with my family and friends.</h4>
 </div>
 
@@ -324,9 +329,9 @@ header {
       <p>• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
       <p>• Good team leading and resource management skills, always leading by example.&nbsp;</p>
       <p>• Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.</p>
-      <p>&nbsp;• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
-      <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp;&nbsp;</p>
-      <p>&nbsp;</p>
+      <p>• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
+      <p>• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp;&nbsp;</p>
+      <p></p>
       <h3><strong>Professional Certifications</strong></h3>
 <p>&nbsp; Pega Lead System Architect :- CLSA&nbsp;</p>
       <p>&nbsp;Pega Marketing Consultant Certification (CPMC)&nbsp;</p>
