--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ header {
   <section class="intro">
  <div class="singlecolumn">
       <h3>Profile&nbsp;</h3>
-<p>A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
+<p>• A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
       <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
       <p>• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
       <p>• Good team leading and resource management skills, always leading by example.&nbsp;</p>
@@ -334,21 +334,21 @@ header {
       <p></p>
       <h3><strong>Professional Certifications</strong></h3>
 <p>&nbsp; Pega Lead System Architect :- CLSA&nbsp;</p>
-      <p>&nbsp;Pega Marketing Consultant Certification (CPMC)&nbsp;</p>
-      <p>&nbsp;Pega Certified Senior System Architect 6.2 (CSSA)&nbsp;</p>
-      <p>&nbsp;Pega Certified System Architect 6.1 (CSA)&nbsp;</p>
-      <p>&nbsp;Sun Certified Web Component Developer (SCWCD).&nbsp;</p>
-      <p>&nbsp;Sun Certified Java Programmer (SCJP). </p>
+      <p>&nbsp;• Pega Marketing Consultant Certification (CPMC)&nbsp;</p>
+      <p>&nbsp;• Pega Certified Senior System Architect 6.2 (CSSA)&nbsp;</p>
+      <p>&nbsp;• Pega Certified System Architect 6.1 (CSA)&nbsp;</p>
+      <p>&nbsp;• Sun Certified Web Component Developer (SCWCD).&nbsp;</p>
+      <p>&nbsp;• Sun Certified Java Programmer (SCJP). </p>
       <p>&nbsp;</p>
       <h2><strong>Professional</strong><strong> Summary</strong>&nbsp;</h2>
       <p>&nbsp; &nbsp; &nbsp;</p>
-      <p> PegaSystems Senior Manager 2018 - Till Date&nbsp;</p>
-      <p> Atos India Pvt Ltd. Technical Architect 2017-2018&nbsp;</p>
-      <p> Capgemini Technical Lead&nbsp; 2014 - 2017</p>
-      <p> Mphasis Team Lead&nbsp; &nbsp;2010-2014</p>
-      <p>Traverze Consultancy Pvt Ltd&nbsp; Sr Developer  2010-2010</p>
-      <p>NIIT Pvt. Ltd, India&nbsp; 2009-2010</p>
-      <p>Jubilant Biosys Ltd. 200-2006&nbsp;</p>
+      <p> • PegaSystems Senior Manager 2018 - Till Date&nbsp;</p>
+      <p>•  Atos India Pvt Ltd. Technical Architect 2017-2018&nbsp;</p>
+      <p> • Capgemini Technical Lead&nbsp; 2014 - 2017</p>
+      <p> • Mphasis Team Lead&nbsp; &nbsp;2010-2014</p>
+      <p>• Traverze Consultancy Pvt Ltd&nbsp; Sr Developer  2010-2010</p>
+      <p>• NIIT Pvt. Ltd, India&nbsp; 2009-2010</p>
+      <p>• Jubilant Biosys Ltd. 200-2006&nbsp;</p>
 <p>&nbsp;</p>
  </div>
   </section>
