--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ header {
 	<br>
 		I am a President of a toatsmanster club who loves to learn new things in dynamic leadership and publick speaking. <br> 
 	<br>
-	  In my free time I love spending time iwth my teenager son, Learn from  him the new trends. <br> 
+	  In my free time I love spending time with my teenager son, Learn from  him the new trends. <br> 
 	<br>
 	    I also love hanging out with my family and friends.</h4>
 </div>
@@ -324,16 +324,16 @@ header {
   <section class="intro">
  <div class="singlecolumn">
       <h3>Profile&nbsp;</h3>
-<p>• A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
-      <p>• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
-      <p>• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
-      <p>• Good team leading and resource management skills, always leading by example.&nbsp;</p>
-      <p>• Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.</p>
-      <p>• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
-      <p>• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp;&nbsp;</p>
+<p>&nbsp;• A result oriented team player with 16+ years of rich and insightful experience in IT industry involving Development and Maintenance.&nbsp;</p>
+      <p>&nbsp;• Proven client interaction skills and very good record of appreciations from the client in implementation, UAT and maintenance phases.&nbsp;</p>
+      <p>&nbsp;• Strong analytical and problem solving skills. • Innovative and played crucial roles in development planning and implementation.&nbsp;</p>
+      <p>&nbsp;• Good team leading and resource management skills, always leading by example.&nbsp;</p>
+      <p>&nbsp;• Very capable technically with vast experience and good knowledge of Pega and J2EE technologies with proven capability to develop applications using huge databases.</p>
+      <p>&nbsp;• Experience in leading and working in blended model with leading and working in team size of up to 20 people.</p>
+      <p>&nbsp;• Worked on domain like Banking, Health Care, Travel • Extensive Knowledge of SDLC from Requirement Gathering to Implementation in the area of Application development. &nbsp;&nbsp;</p>
       <p></p>
       <h3><strong>Professional Certifications</strong></h3>
-<p>&nbsp; Pega Lead System Architect :- CLSA&nbsp;</p>
+<p>&nbsp; •Pega Lead System Architect :- CLSA&nbsp;</p>
       <p>&nbsp;• Pega Marketing Consultant Certification (CPMC)&nbsp;</p>
       <p>&nbsp;• Pega Certified Senior System Architect 6.2 (CSSA)&nbsp;</p>
       <p>&nbsp;• Pega Certified System Architect 6.1 (CSA)&nbsp;</p>
@@ -342,13 +342,13 @@ header {
       <p>&nbsp;</p>
       <h2><strong>Professional</strong><strong> Summary</strong>&nbsp;</h2>
       <p>&nbsp; &nbsp; &nbsp;</p>
-      <p> • PegaSystems Senior Manager 2018 - Till Date&nbsp;</p>
-      <p>•  Atos India Pvt Ltd. Technical Architect 2017-2018&nbsp;</p>
-      <p> • Capgemini Technical Lead&nbsp; 2014 - 2017</p>
-      <p> • Mphasis Team Lead&nbsp; &nbsp;2010-2014</p>
-      <p>• Traverze Consultancy Pvt Ltd&nbsp; Sr Developer  2010-2010</p>
-      <p>• NIIT Pvt. Ltd, India&nbsp; 2009-2010</p>
-      <p>• Jubilant Biosys Ltd. 200-2006&nbsp;</p>
+      <p> &nbsp;• PegaSystems Senior Manager 2018 - Till Date&nbsp;</p>
+      <p>&nbsp;•  Atos India Pvt Ltd. Technical Architect 2017-2018&nbsp;</p>
+      <p>&nbsp; • Capgemini Technical Lead&nbsp; 2014 - 2017</p>
+      <p> &nbsp;• Mphasis Team Lead&nbsp; &nbsp;2010-2014</p>
+      <p>&nbsp;• Traverze Consultancy Pvt Ltd&nbsp; Sr Developer  2010-2010</p>
+      <p>&nbsp;• NIIT Pvt. Ltd, India&nbsp; 2009-2010</p>
+      <p>&nbsp;• Jubilant Biosys Ltd. 200-2006&nbsp;</p>
 <p>&nbsp;</p>
  </div>
   </section>
